--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -5,6 +5,7 @@
     border-radius: 20px;
     padding: .5625em 1em;
     margin: 0 0 1rem 0;
+    font-size: 1rem;
     background-color: #900;
     color: #fff;
 }
