--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,7 +7,11 @@
     margin: 0 0 1rem 0;
     font-size: 1rem;
     background-color: #900;
+    color: #fff;
     a:link {
+        color: #fff;
+    }
+    a:visited {
         color: #fff;
     }
     
